# app/Http/Controllers/TestingController.php
@@ -1,29 +1,0 @@
-<?php
-
-namespace App\Http\Controllers;
-
-use Illuminate\Http\Request;
-
-class TestingController extends Controller
-{
-      /**
-     * @SWG\Get(
-     *   path="/api/testing/{mytest}",
-     *   summary="Get Testing",
-     *   operationId="testing",
-     *   @SWG\Response(response=200, description="successful operation"),
-     *   @SWG\Response(response=406, description="not acceptable"),
-     *   @SWG\Response(response=500, description="internal server error"),
-	 *		@SWG\Parameter(
-     *          name="mytest",
-     *          in="path",
-     *          required=true,
-     *          type="string"
-     *      ),
-     * )
-     *
-     */
-	public function index(Request $request){
-		echo $request->mytest;
-	}
-}
